<resources>
    <string name="app_name" translatable="false">PokeCards</string>
    <string name="preferences" translatable="false">com.example.adae.PREFERENCE_KEY</string>
    <string name="gracias">¡Gracias por jugar!</string>
    <string name="title_activity_drawer" translatable="false">DrawerActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="cartas" translatable="false">/comunes</string>
    <string name="cartasde" translatable="false">/comunesde</string>
    <string name="cartasen" translatable="false">/comunesen</string>
    <string name="comunes" translatable="false">/pixelart</string>
    <string name="epic" translatable="false">/epic</string>
    <string name="legendarias" translatable="false">/legendarias</string>
    <string name="title_activity_shop" translatable="false">Shop</string>
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Siguiente</string>
    <string name="previous">Anterior</string>
    <string name="sign_in" translatable="false">Sign in</string>
    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="remember_me">Recordar datos</string>
    <string name="username">Usuario</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Contraseña</string>
    <string name="login" translatable="false">Login</string>
    <string name="register">Registrarse</string>
    <string name="recuperarcontraseña">Recuperar</string>
    <string name="recuperar">Recuperar contraseña</string>
    <string name="forgot_password">¿Olvidó la contraseña?</string>
    <string name="uno">Comprar 1(1€)</string>
    <string name="diez">Comprar 10(9.50€)</string>
    <string name="veinte">Comprar 20(17.99€)</string>
    <string name="new_user">¿Nuevo usuario?</string>
    <string name="accept">Aceptar</string>
    <string name="decline">Rechazar</string>
    <string name="long_message" translatable="false" />
    <string name="titulo">titulo</string>
    <string name="volverlogin">Volver al login</string>
    <string name="atrás">Volver al menú principal</string>
    <string name="Entrenador">Entrenador destacado</string>
    <string name="warning">Esta aplicación está siendo desarrollada por 2 estudiantes y se irá actualizando poco a poco, es posible que haya funcionalidades que no estén disponibles</string>
    <string name="ciudadverde">Ciudad Verde</string>
    <string name="ciudadazulona">Ciudad Azulona</string>
    <string name="ciudadceleste">Ciudad Celeste</string>
    <string name="ciudadacarmin">Ciudad Carmin</string>
    <string name="ciudadafucsia">Ciudad Fucsia</string>
    <string name="ciudadcanela">Isla Canela</string>
    <string name="ciudadplateada">Ciudad Plateada</string>
    <string name="ciudadazafran">Ciudad Azafran</string>
    <string name="liderverde">Giovanni, lider del gimnasio de Ciudad Verde y a su vez líder del Team Rocket. Usa pokémons tipo tierra, es una persona muy ambiciosa que desea controlar el mundo usando a los pokémon</string>
    <string name="liderceleste">Misty, líder del gimnasio de Ciudad Celeste, especialista en pokémon tipo agua.</string>
    <string name="lidercarmin">Lt. surge o Teniente Surge es el lider del gimnasio en ciudad Carmin. Surge tenía como mote "El rayo americano" esto fue en su época en el ejército donde usaba sus pokémon tipo eléctrico para poner en marcha su avión. Es por ello que su gimansio está todo lleno de torres de electricidad y sus pokémon son todos tipo eléctrico.</string>
    <string name="liderfucsia">Koga, lider de gimnasio de  ciudad Fucsia, Además de entrenador tiene conocimientos en ediciana, el elabora sus propias medicinas con sus pokémon tipo veneno.</string>
    <string name="lidercanela">Blaine, líder del gimnasio de Isla Canela, considereado de los hombres más inteligentes de la región que usa pokémon tipo fuego.</string>
    <string name="liderplateada">Brock, líder del gimnasio de Ciudad Plateada especializado en pokémon tipo roca, a pesar de ser líder de gimnasio su deseo es llegar a ser uno de los mejores doctores pokémon.</string>
    <string name="liderazafran">Sabrina, lider del gimnasio en Ciudad Azafran, controla pokemons tipo psíquico, es actriz en Teselia ademas de ser considerada una de las mejores cantantes de la región.</string>
    <string name="textociudadverde">La ciudad Verde consta con un amplio bosque alrededor, con una de las escuelas y laboratorios más grandes de la región, así como la base del Team Rocket liderada por el líder del gimnasio Giovanni.</string>
    <string name="textociudadazulona">La ciudad Azulona consta con una gran variedad de centros comerciales así como centros de ocio como el Casino o uno de los mejores restaurantes.</string>
    <string name="textociudadceleste">La ciudad Celeste tiene un lugar misterioso donde podrás encontrar pokemons extraordinarios. Tambien tiene la tienda de bicis más importante de la región de Kanto</string>
    <string name="textociudadcarmin">La ciudad Carmín tiene el mayor puerto de toda la región, ahí encontrarás los barcos mas lujosos, famosos.</string>
    <string name="textociudadfucsia">La ciudad Fucsia consta con una gran variedad de pokemons gracias a su Zona Safari.</string>
    <string name="textociudadcanela">La Isla Canela es la isla más importante, ahí encontrarás un volcán actualmente sin actividad así como los laboratorios más importantes. A pesar de su importancia la isla en la actualidad esta completamente deshabitada.</string>
    <string name="textociudadplateada">La ciudad Plateada tiene el museo más grande de ciencia de la región. Este museo consta con una inmensa variedad de fósiles de pokemons.</string>
    <string name="textociudadazafran">La ciudad azafrán es la cuidad mas extensa de Kanto, considerada la capital de esta región, a su vez conocida como la Hebra de Oro ya que hace honor a su nombre siendo la ciudad con más comercio.</string>
    <string name="Medallas">Medallas</string>
    <string name="Entrenadores">Entrenadores</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="liderazulona">Erika, líder del gimansio de Ciudad Azulona, ella es especialista en pokémon tipo planta, su gimnasio es a su ve un invernadero lleno de flores</string>
    <string name="arena1">Para alcanzar esta arena se necesitan entre 5 y 10 cartas</string>
    <string name="arena2">Para alcanzar esta arena se necesitan entre 10 y 15 cartas</string>
    <string name="arena3">Para alcanzar esta arena se necesitan entre 15 y 20 cartas</string>
    <string name="arena4">Para alcanzar esta arena se necesitan entre 20 y 25 cartas</string>
    <string name="arena5">Para alcanzar esta arena se necesitan entre 25 y 30 cartas</string>
    <string name="arena6">Para alcanzar esta arena se necesitan 30 cartas</string>
    <string name="creamazo">¡Crea tu mazo!</string>
    <string name="nombremazo">Nombre mazo 1</string>

</resources>

