<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/gradient_2">


        <LinearLayout
            android:id="@+id/LinearLayout01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <pl.droidsonroids.gif.GifImageView
                android:layout_width="match_parent"
                android:layout_height="116dp"
                android:src="@drawable/mrmime">
            </pl.droidsonroids.gif.GifImageView>
            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="22dip"
                android:textSize="18sp"
                android:fontFamily="@font/minecraft"
                android:text="@string/liderazafran" >
            </TextView>

            <pl.droidsonroids.gif.GifImageView
                android:layout_width="match_parent"
                android:layout_height="116dp"
                android:src="@drawable/dugtrio">
            </pl.droidsonroids.gif.GifImageView>
            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="22dip"
                android:textSize="18sp"
                android:fontFamily="@font/minecraft"
                android:text="@string/liderverde" >
            </TextView>

            <pl.droidsonroids.gif.GifImageView
                android:layout_width="match_parent"
                android:layout_height="116dp"
                android:src="@drawable/ponyta">
            </pl.droidsonroids.gif.GifImageView>
            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="22dip"
                android:textSize="18sp"
                android:fontFamily="@font/minecraft"
                android:text="@string/lidercanela" >
            </TextView>

            <pl.droidsonroids.gif.GifImageView
                android:layout_width="match_parent"
                android:layout_height="116dp"
                android:src="@drawable/koffing">
            </pl.droidsonroids.gif.GifImageView>
            <TextView
                android:id="@+id/TextView04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="22dip"
                android:textSize="18sp"
                android:fontFamily="@font/minecraft"
                android:text="@string/liderfucsia" >
            </TextView>

            <pl.droidsonroids.gif.GifImageView
                android:layout_width="match_parent"
                android:layout_height="116dp"
                android:src="@drawable/vileplume">
            </pl.droidsonroids.gif.GifImageView>
            <TextView
                android:id="@+id/TextView05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="22dip"
                android:textSize="18sp"
                android:fontFamily="@font/minecraft"
                android:text="@string/liderazulona" >
            </TextView>

            <pl.droidsonroids.gif.GifImageView
                android:layout_width="match_parent"
                android:layout_height="116dp"
                android:src="@drawable/onix">
            </pl.droidsonroids.gif.GifImageView>
            <TextView
                android:id="@+id/TextView06"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="22dip"
                android:textSize="18sp"
                android:fontFamily="@font/minecraft"
                android:text="@string/liderplateada" >
            </TextView>


        </LinearLayout>


</ScrollView>