<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_list"
    tools:context=".ProgressionActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="4sp"
        app:tabTextAppearance="@style/MyTabLayoutTextAppearance"
        app:tabTextColor="@color/black"
        app:tabIndicatorColor="@color/colorOrange"
        app:tabSelectedTextColor="@color/colorOrange"
        tools:ignore="MissingConstraints"/>

    <Button
        android:id="@+id/Atrás"
        android:layout_width="185dp"
        android:layout_height="62dp"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/colorOrange"
        android:fontFamily="@font/candal"
        android:onClick="irAtras"
        android:text="@string/atrás"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        tools:ignore="MissingConstraints" />
    <Button
        android:id="@+id/volvermenu"
        android:layout_width="185dp"
        android:layout_height="62dp"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/colorOrange"
        android:fontFamily="@font/candal"
        android:onClick="irAtras"
        android:text="@string/atrás"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        tools:ignore="MissingConstraints" />

    

    <Button
        android:id="@+id/Entrenadores"
        android:layout_width="186dp"
        android:layout_height="39dp"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/colorOrange"
        android:fontFamily="@font/candal"
        android:text="@string/Entrenador"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.878" />

    <Button
        android:id="@+id/medallas"
        android:layout_width="186dp"
        android:layout_height="39dp"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/colorOrange"
        android:fontFamily="@font/candal"
        android:text="@string/Medallas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.822" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="-160dp" />



</androidx.constraintlayout.widget.ConstraintLayout>